[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"
description="A commandline password manager"
authors=["Juan Milkah <juanmilkah@gmail.com>"]
license="MIT"

[dependencies]
bcrypt = "0.16.0"
home = "0.5.11"
rpassword = "7.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
